여러 유저 검색 API 디자인 수정
